deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catsanddogs
  namespace: dev
spec:
  selector:
    matchLabels:
      app: catsanddogs
  replicas: 1
  template:
    metadata:
      labels:
        app: catsanddogs
    spec:
      containers:
      - name: catsanddogs
        image: lorenzoedoardofrancesco/catsanddogs_lsimanic:v1
        ports:
        - containerPort: 80
