service.yaml
apiVersion: v2
kind: Service
metadata:
  name: catsanddogsgenerator-service
  namespace: dev
spec:
  selector:
    app: catsanddogsgenerator
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 80
