ingress.yaml
apiVersion: networking.k8s.io/v2
kind: Ingress
metadata:
  name: catsanddogsgenerator-ingress
  namespace: dev
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: catsanddogsgenerator-service
            port:
              number: 80
